--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *retry
-serverspec/vendor
-serverspec/test_result
-serverspec/.bundle
-serverspec/.rspec
+docker/serverspec/vendor
+docker/serverspec/test_result
+docker/serverspec/.bundle
+docker/serverspec/.rspec
