--- a/docker/ansible/jorurimail/playbook/jorurimail_web.yml
+++ b/docker/ansible/jorurimail/playbook/jorurimail_web.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: jorurimail_webdb
+- hosts: jorurimail_web
   become: yes
   connection: docker
   gather_facts: no
@@ -9,24 +9,10 @@
     group: joruri
     user_uid: 1001
     user_passwd: $1$SomeSalt$ZSU2MwC9RbVz5E6EYFgjV1
-    db_user: joruri
-    db_user_password: 'pass'
-    db_user_root_password: 'pass'
     ruby_library_version: "1.9.1"
     passenger_version: "3.0.9"
     rails_version: "3.0.0"
   roles:
-
-    # mysql5.6.centosのインストール
-    - {role: ../common-roles/mysql5.6.centos,
-       my_conf_template: my.cnf.j2,
-       my_conf_server_id: 123456,
-       mysql_root_password: '{{ db_user_root_password }}',
-       mysql_operation_user: '{{ db_user }}',
-       mysql_operation_user_password: '{{ db_user_password }}',
-       create_database: 'jorurimail',
-       tags: mysql
-      }
 
     # ruby-1.9.2-p290のインストール
     - {role: ../common-roles/ruby-1.9.2-p290.centos,
