--- a/docker/docker_compose/joruri/docker-compose_jorurimail_web_jorurimail_db_imap_smtp.yml
+++ b/docker/docker_compose/joruri/docker-compose_jorurimail_web_jorurimail_db_imap_smtp.yml
@@ -2,12 +2,13 @@ smtp:
    image: ftakao2007/smtp:latest
    container_name: smtp
    tty: true
+   privileged: true
    volumes:
      - /home
    expose:
      - "25"
      - "587"
-   command: sh -c 'service postfix restart && /bin/bash --login'
+   command: sh -c 'service postfix restart && service rsyslog restart && /bin/bash --login'
 
 imap:
    image: ftakao2007/imap:latest
@@ -17,7 +18,7 @@ imap:
      - smtp
    expose:
      - "143"
-   command: sh -c 'service dovecot restart && /bin/bash --login'
+   command: sh -c 'service dovecot restart && service rsyslog restart && /bin/bash --login'
 
 jorurimail_db:
    image: ftakao2007/jorurimail_db:latest
@@ -25,7 +26,7 @@ jorurimail_db:
    tty: true
    expose:
      - "3306"
-   command: sh -c 'service mysqld restart && /bin/bash --login'
+   command: sh -c 'service mysqld restart && service rsyslog restart && /bin/bash --login'
 
 jorurimail_web:
    image: ftakao2007/jorurimail_web:latest
@@ -37,6 +38,7 @@ jorurimail_web:
      - smtp
    ports:
      - "8082:80"
-   command: sh -c '/root/init_jorurimail_web_imap.sh'
+   command: sh -c '/root/init_jorurimail_web_imap_smtp.sh'
+   #command: sh -c '/root/init_jorurimail_web_imap.sh'
    #command: sh -c '/root/init_jorurimail_web.sh'
    #command: sh -c ' service httpd start && /bin/bash --login'
