--- a/docker/docker_compose/joruri/docker-compose_jorurimail_web_jorurimail_db_imap_ldap.yml
+++ b/docker/docker_compose/joruri/docker-compose_jorurimail_web_jorurimail_db_imap_ldap.yml
@@ -11,7 +11,7 @@ imap_ldap:
    container_name: imap_ldap
    tty: true
    privileged: true
-   volumes_from:
+   links:
      - ldap
    expose:
      - "143"
