--- a/docker/ansible/jorurigw/playbook/create_container_jorurigw_web.yml
+++ b/docker/ansible/jorurigw/playbook/create_container_jorurigw_web.yml
@@ -5,7 +5,7 @@
     - name: deploy centos container
       docker: 
         image=centos:centos6
-        name=jorurimail_web
-        ports=8082:80
+        name=jorurigw_web
+        ports=8084:80
         expose=80
         tty=yes
