--- a/docker/docker_compose/adhock/docker-compose_operation_centos6.yml
+++ b/docker/docker_compose/adhock/docker-compose_operation_centos6.yml
@@ -1,6 +1,6 @@
-base:
-   image: ftakao2007/base:latest
-   container_name: base
+operation_centos6:
+   image: ftakao2007/operation_centos6:latest
+   container_name: operation_centos6
    privileged: true
    tty: true
    ports:
