--- a/docker/ansible/deco/playbook/create_container_deco_web.yml
+++ b/docker/ansible/deco/playbook/create_container_deco_web.yml
@@ -5,7 +5,7 @@
     - name: deploy centos container
       docker: 
         image=centos:centos6
-        name=jorurigw_web
-        ports=8084:80
+        name=deco_web
+        ports=8088:80
         expose=80
         tty=yes
