--- a/docker/docker_compose/joruri/docker-compose_jorurigw_web_jorurigw_db_jorurimail_web_jorurimail_db_joruriplus_web_joruriplus_db_imap_smtp_ldap.yml
+++ b/docker/docker_compose/joruri/docker-compose_jorurigw_web_jorurigw_db_jorurimail_web_jorurimail_db_joruriplus_web_joruriplus_db_imap_smtp_ldap.yml
@@ -3,13 +3,15 @@ jorurigw_db:
    container_name: jorurigw_db
    tty: true
    environment:
-     - DOCKER_HOST_PORT_8082_TCP_ADDR=192.168.33.12
+     - DOCKER_HOST_PORT_8082_TCP_ADDR=10.136.3.187
      - DOCKER_HOST_PORT_8082_TCP_PORT=8082
-     - DOCKER_HOST_PORT_8086_TCP_ADDR=192.168.33.12
+     - DOCKER_HOST_PORT_8086_TCP_ADDR=10.136.3.187
      - DOCKER_HOST_PORT_8086_TCP_PORT=8086
+   ports:
+     - "2222:22"
    expose:
      - "3306"
-   command: sh -c '/bin/sh /root/init_compose_jorurigw_jorurimail_joruriplus.sh'
+   command: sh -c 'service sshd start && /bin/sh /root/init_compose_jorurigw_jorurimail_joruriplus.sh'
    #command: sh -c '/bin/sh /root/init_compose_jorurigw_db.sh'
    #command: sh -c 'service mysqld restart && service rsyslog restart && /bin/bash --login'
 
@@ -17,27 +19,32 @@ jorurimail_db:
    image: ftakao2007/jorurimail_db:latest
    container_name: jorurimail_db
    tty: true
+   ports:
+     - "2223:22"
    expose:
      - "3306"
-   command: sh -c 'service mysqld restart && service rsyslog restart && /bin/bash --login'
+   command: sh -c 'service mysqld restart && service rsyslog restart && service sshd start && /bin/bash --login'
 
 joruriplus_db:
    image: ftakao2007/joruriplus_db:latest
    container_name: joruriplus_db
    tty: true
+   ports:
+     - "2224:22"
    expose:
      - "3306"
-   command: sh -c 'service mysqld restart && service mongod restart && /bin/bash --login'
+   command: sh -c 'service mysqld restart && service mongod restart && service sshd start && /bin/bash --login'
 
 ldap:
    image: ftakao2007/ldap:latest
    container_name: ldap
    tty: true
    ports:
+     - "2225:22"
      - "389:389"
    expose:
      - "389"
-   command: sh -c 'service slapd restart && service rsyslog restart && /bin/bash --login'
+   command: sh -c 'service slapd restart && service rsyslog restart && service sshd start && /bin/bash --login'
 
 smtp_ldap:
    image: ftakao2007/smtp_ldap:latest
@@ -48,11 +55,13 @@ smtp_ldap:
      - /home
    links:
      - ldap
+   ports:
+     - "2226:22"
    expose:
      - "25"
      - "587"
    command: sh -c '/bin/sh /root/init_smtp_ldap.sh'
-   #command: sh -c 'service postfix restart && service rsyslog restart && /bin/bash --login'
+   #command: sh -c 'service postfix restart && service rsyslog restart && service sshd start && /bin/bash --login'
 
 imap_ldap:
    image: ftakao2007/imap_ldap:latest
@@ -63,10 +72,12 @@ imap_ldap:
      - smtp_ldap
    links:
      - ldap
+   ports:
+     - "2227:22"
    expose:
      - "143"
    command: sh -c '/bin/sh /root/init_imap_ldap.sh'
-   #command: sh -c 'service dovecot restart && service rsyslog restart && /bin/bash --login'
+   #command: sh -c 'service dovecot restart && service rsyslog restart && service sshd start && /bin/bash --login'
 
 jorurimail_web:
    image: ftakao2007/jorurimail_web:latest
@@ -78,8 +89,10 @@ jorurimail_web:
      - smtp_ldap
      - ldap
    ports:
+     - "2228:22"
      - "8082:80"
-   command: sh -c '/root/init_jorurimail_web_imap_smtp_ldap.sh'
+   command: sh -c 'service sshd restart && /bin/sh /root/init_jorurimail_web_imap_smtp_ldap.sh'
+   #command: sh -c 'service sshd restart && /root/init_jorurimail_web_imap_smtp_ldap.sh'
    #command: sh -c '/root/init_jorurimail_web_imap_smtp.sh'
    #command: sh -c '/root/init_jorurimail_web_imap.sh'
    #command: sh -c '/root/init_jorurimail_web.sh'
@@ -94,8 +107,9 @@ joruriplus_web:
      - joruriplus_db
      - ldap
    ports:
+     - "2229:22"
      - "8086:80"
-   command: sh -c '/root/init_joruriplus_web_ldap.sh'
+   command: sh -c 'service sshd start && /root/init_joruriplus_web_ldap.sh'
    #command: sh -c '/root/init_joruriplus_web.sh'
    #command: sh -c ' service httpd start && /bin/bash --login'
 
@@ -108,8 +122,9 @@ jorurigw_web:
      - jorurigw_db
      - ldap
    ports:
+     - "2230:22"
      - "8084:80"
-   command: sh -c '/root/init_jorurigw_web_ldap_smtp.sh'
+   command: sh -c 'service sshd start && /root/init_jorurigw_web_ldap_smtp.sh'
    #command: sh -c '/root/init_jorurigw_web_ldap.sh'
    #command: sh -c '/root/init_jorurigw_web.sh'
    #command: sh -c ' service httpd start && /bin/bash --login'
